# cpp-learn

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
googletest/: .gitignore
include/: cp.h
include/StrVecLib/: StrVecLib.h
include/TextQueryLib/: TextQueryLib.h
simple_test/: .gitignore  Makefile  README.md  main.cpp  usage_uptr.cpp
src/: main.cpp  start.cpp
src/StrVecLib/: CMakeLists.txt  StrVecLib.cpp
src/TextQueryLib/: CMakeLists.txt  TextQueryLib.cpp
test/: TextQueryTest.txt
test/StrVecTest/: CMakeLists.txt  StrVecTest.cpp
vftl_imp/: Makefile  README.md
